changes_based_on_rewiev_recommendations_please_overseer

--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
 
     <div class="container front">
         <img src="images/hamburger.jpg" alt="haburger">
-        <div class="text">
+        <div class="title">
             <h1>Le Catering</h1>
         </div>
     </div>
 
-    <div class="container" id="about">
+    <div class="container pt-30" id="about">
         <div class="row ">
-            <div class="column">
-                <img src="images/tablesetting2.jpg" class="w-100" alt="">
+            <div class="w-50">
+                <img src="images/tablesetting2.jpg" class="w-100" alt="table2">
             </div>
-            <div class="about-text column">
+            <div class="about-text w-50">
                 <h2>About Catering</h2>
                 <h3>Tradition since 1889</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus velit amet labore officiis, nemo
@@ -60,7 +60,7 @@
         </div>
 
         <div class="row" id="menu">
-            <div class="menu-text column">
+            <div class="menu-text w-50">
                 <h2>Our menu</h2>
                 <div class="menu-item padding">
                     <h4>Bread Basket</h4>
@@ -86,16 +86,16 @@
                     <p>With syrup, butter and lots of berries 8.50</p>
                 </div>
             </div>
-            <div class="column">
-                <img src="images/tablesetting.jpg" class="w-100" alt="">
+            <div class="w-50">
+                <img src="images/tablesetting.jpg" class="w-100" alt="table">
             </div>
         </div>
         <div class="container-line">
             <hr />
         </div>
     </div>
-    <div class="container " id="contact">
-        <h2>Contact</h2>
+    <div class="container pt-30" id="contact">
+        <h5>Contact</h5>
         <p>We offer full-service catering for any event, large or small. We understand your needs and we will cater the
             food to satisfy the biggerst criteria of them all, both look and taste. Do not hesitate to contact us. </p>
         <p class="color-teal">Catering Service, 42nd Living St, 43043 New York, NY </p>
