media_view_please_overseer

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 </head>
 
 <body>
-    <nav>
+    <nav class="s-t-a-c">
         <div class="logo">
             <a href="#">Gourmet au Catering</a>
         </div>
-        <ul class="menu">
+        <ul class="menu ">
             <li><a href="#">Home</a></li>
             <li><a href="#menu">Menu</a></li>
             <li><a href="#contact">Contact</a></li>
@@ -42,12 +42,14 @@
                 <img src="images/tablesetting2.jpg" class="w-100" alt="table2">
             </div>
             <div class="about-text w-50">
-                <h2>About Catering</h2>
-                <h3>Tradition since 1889</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus velit amet labore officiis, nemo
+                <h2 class="l-h-normal">About Catering</h2>
+                <h3 class="s-t-a-c l-h-normal">Tradition since 1889</h3>
+                <p class="s-t-a-c "> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus velit amet
+                    labore officiis, nemo
                     error laborum expedita magnam earum hic vel molestias magni, officia quibusdam quae, sed ab voluptas
                     laboriosam unde et maxime? Suscipit quas assumenda porro? Vero, qui iste.</p>
-                <p class="text-gray">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet repellendus facilis
+                <p class="text-gray s-t-a-c ">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Amet repellendus
+                    facilis
                     accusantium eos
                     impedit perspiciatis quaerat rem vitae ad dolores nihil aliquid beatae corporis cumque eligendi
                     libero error et reiciendis quod voluptas deleniti numquam, nisi minus placeat? Corrupti facere quo
@@ -61,29 +63,29 @@
 
         <div class="row" id="menu">
             <div class="menu-text w-50">
-                <h2>Our menu</h2>
-                <div class="menu-item padding">
+                <h2 class=".l-h-normal">Our menu</h2>
+                <div class="menu-item padding s-t-a-c ">
                     <h4>Bread Basket</h4>
-                    <p>Assortment of fresh baked fruit breads and muffins 5.50 </p>
+                    <p class="s-t-a-c ">Assortment of fresh baked fruit breads and muffins 5.50 </p>
                 </div>
-                <div class="menu-item padding">
+                <div class="menu-item padding s-t-a-c ">
                     <h4>Honey Almond Granola with Fruits
                         t</h4>
-                    <p>Natural cereal of honey toasted oats, raisins, almonds and dates 7.00
+                    <p class="s-t-a-c ">Natural cereal of honey toasted oats, raisins, almonds and dates 7.00
 
                     </p>
                 </div>
-                <div class="menu-item padding">
+                <div class="menu-item padding s-t-a-c ">
                     <h4>Belgian Waffle</h4>
-                    <p>Vanilla flavored batter with malted flour 7.50</p>
+                    <p class="s-t-a-c ">Vanilla flavored batter with malted flour 7.50</p>
                 </div>
-                <div class="menu-item padding">
+                <div class="menu-item padding s-t-a-c ">
                     <h4>Scrambled eggs</h4>
-                    <p>Scrambled eggs, roasted red pepper and garlic, with green onions 7.50</p>
+                    <p class="s-t-a-c ">Scrambled eggs, roasted red pepper and garlic, with green onions 7.50</p>
                 </div>
-                <div class="menu-item padding">
+                <div class="menu-item padding s-t-a-c ">
                     <h4>Blueberry Pancakes</h4>
-                    <p>With syrup, butter and lots of berries 8.50</p>
+                    <p class="s-t-a-c ">With syrup, butter and lots of berries 8.50</p>
                 </div>
             </div>
             <div class="w-50">
@@ -95,15 +97,16 @@
         </div>
     </div>
     <div class="container pt-30" id="contact">
-        <h5>Contact</h5>
-        <p>We offer full-service catering for any event, large or small. We understand your needs and we will cater the
+        <h5 class="s-t-a-c ">Contact</h5>
+        <p class="s-t-a-c ">We offer full-service catering for any event, large or small. We understand your needs and
+            we will cater the
             food to satisfy the biggerst criteria of them all, both look and taste. Do not hesitate to contact us. </p>
-        <p class="color-teal">Catering Service, 42nd Living St, 43043 New York, NY </p>
-        <p>You can also contact us by phone <a href="tel:00553123-2323">00553123-2323</a> or email
+        <p class="color-teal s-t-a-c ">Catering Service, 42nd Living St, 43043 New York, NY </p>
+        <p class="s-t-a-c "> You can also contact us by phone <a href="tel:00553123-2323">00553123-2323</a> or email
             <a href="mailto:catering@catering.com">catering@catering.com</a>, or you can send us a
             message
             here:</p>
-        <form>
+        <form class="s-t-a-c ">
             <input type="text" id="fname" name="fname" placeholder="Name" required><br>
             <input type="number" id="people" name="people" placeholder="How many people" min="1" max="100" required>
             <input type="datetime-local" id="meeting-time" name="meeting-time" value="datetime-local"
